# glasswing

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
cachewing/: Cargo.toml
cachewing/src/: lib.rs  quadratic_probing.rs  traits.rs
glasswing/: Cargo.toml
glasswing-core/: Cargo.toml
glasswing-core/src/: lib.rs
glasswing-core/src/agents/: minimax_agent.rs  mod.rs  random_agent.rs  simple_agent.rs
glasswing-core/src/core/: mod.rs  pit.rs  traits.rs
glasswing-core/src/tests/: counting_game.rs  tic_tac_toe.rs
glasswing-testing/: Cargo.toml
glasswing-testing/src/games/: counting_game.rs  mod.rs
glasswing/src/: lib.rs
glasswing/src/agents/: agent.rs  evaluator.rs  expectiminimax.rs  functional_agent.rs  human_agent.rs  minimax.rs  minimax_agent.rs  mod.rs  negamax.rs  negamax_agent.rs  random_agent.rs  simple_agent.rs
glasswing/src/core/: action.rs  game.rs  game_result.rs  mod.rs  pit.rs  serialization.rs  state.rs  team.rs  traits.rs
glasswing/src/games/: counting_game.rs  mod.rs  random_counting.rs  tic_tac_toe.rs
glasswing/src/perft/: mod.rs  transposition.rs
glasswing/src/train/: mod.rs  pit.rs
glasswing_games/: Cargo.toml
glasswing_games/examples/: connect4_perft.rs
glasswing_games/src/: connect4.rs  lib.rs  nxn_tictactoe.rs  tictactoe.rs
src/: lib.rs  main.rs
src/agents/: minimax_agent.rs  mod.rs  monke_agent.rs  random_agent.rs  simple_agent.rs
src/core/: bridge.rs  contest.rs  game_history.rs  managed_contest.rs  mod.rs  move_history.rs  pit.rs  player.rs  traits.rs
src/games/: counting_game.rs  mod.rs  tic_tac_toe.rs
