[package]
name = "glasswing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.48"
log = "0.4.20"
rand = "0.8.5"
num-traits = "0.2.17"
itertools = "0.12.0"
smallvec = "1.11.2"
cachewing = { path = "../cachewing" }

[dev-dependencies]
glasswing_games = { path = "../glasswing_games" }
ordered-float = "4.2.0"