[package]
name = "glasswing_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glasswing = { path = "../glasswing" }
cachewing = { path = "../cachewing" }
ordered-float = "4.2.0"
itertools = "0.12.0"
ahash = { version = "0.8.7" }

[features]
simd_support = []